traq-dev/frontend/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traq-frontend
spec:
  template:
    spec:
      nodeSelector:
        kubernetes.io/hostname: eee101.tokyotech.org
      containers:
        - name: traq-frontend
          image: ghcr.io/traptitech/traq-ui:master@sha256:2283f7141c3ba42c79e7a98ecad109bf086f578fd6189b478a09c28eacc15ebd
          resources:
            requests:
              cpu: "10m"
              memory: "32Mi"
            limits:
              cpu: "40m"
              memory: "128Mi"
