traq-dev/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: traq-dev-frontend
  name: traq-dev-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traq-dev-frontend
  template:
    metadata:
      labels:
        app: traq-dev-frontend
    spec:
      nodeSelector:
        kubernetes.io/hostname: s512.tokyotech.org
      containers:
        - image: ghcr.io/traptitech/traq-ui:master@sha256:02476347c49cc466eac36fc0c89dac2c77f6d66e2a5104ee00e29d1e0b36f21e
          name: traq-dev-frontend
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always
