traq-dev/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: traq-dev-frontend
  name: traq-dev-frontend
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 80
  ipFamilies:
    - IPv4    
    - IPv6
  ipFamilyPolicy: PreferDualStack
  selector:
    io.kompose.service: traq-dev-frontend
