traq-dev/frontend/ingress-route-patch.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traq-frontend

spec:
  routes:
    - kind: Rule
      match: Host(`q-dev.trapti.tech`)
      middlewares:
        - name: auth-trapti-tech-hard
          namespace: auth
      priority: -100
      services:
        - namespace: traq-dev
          kind: Service
          name: traq-frontend
          port: 8000
          scheme: http
          weight: 1
